support patient diagnoses
